<resources>
    <string name="app_name">Budget App</string>

    <string name="action_settings">Settings</string>
    <string name="action_delete">Delete</string>
    <string name="action_add">Add</string>
    <string name="action_search">Search</string>

    <string name="data_input">Enter In A Value And Fill In The Table</string>
    <string name="category">Category</string>
    <string name="subcategory">Subcategory</string>
    <string name="amount">Amount</string>
    <string name="choose_amount_label">Choose an amount</string>
    <string name="expense">Expense</string>
    <string name="expenses">Expenses</string>
    <string name="type">Type</string>
    <string name="income">Income</string>
    <string name="budget">Budget</string>
    <string name="date">Date</string>
    <string name="note">Note</string>

    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="year">Year</string>

    <!-- Nav Menu Strings -->
    <string name="dashboard">Dashboard</string>
    <string name="charts">Charts</string>
    <string name="graphs">Graphs</string>
    <string name="data">Data</string>
    <string name="backup">Backup</string>
    <string name="settings">Settings</string>

    <!-- Setting Activity Strings -->
    <string name="general">General</string>
    <string name="theme">Themes</string>

    <!-- FRAGMENT DASHBOARD -->
    <string name="dashboard_title">Overview</string>

    <!-- Fragment Add Data -->
    <string name="add_data_note_description">Write a note that is no more than 100 words</string>
    <string name="add_data_note_hint">Description</string>
    <string name="add_data_category_hint">Set A Category</string>
    <string name="add_data_subcategory_hint">Choose A Refined Category</string>
    <string name="add_data_date_hint">Date not set</string>
    <string name="add_data_date_button">Select a date</string>
    <string name="add_data_date_change_button">Change date</string>

    <!-- FRAGMENT CHART -->
    <string-array name="chartarray">
        <item>All</item>
        <item>Day</item>
        <item>Week</item>
        <item>Month</item>
        <item>Year</item>
    </string-array>

    <!-- FRAGMENT GRAPH -->
    <string name="yearly">Yearly</string>
    <string name="monthly">Montly</string>
    <string name="weekly">Weekly</string>

    <string-array name="categoryarray">
        <item>Food</item>
        <item>Utilities</item>
        <item>Entertainment</item>
        <item>Medical</item>
        <item>Insurance</item>
        <item>Misc</item>
    </string-array>

    <string-array name="subgroceryarray">
        <item>Groceries</item>
        <item>Fast Food</item>
        <item>Misc</item>
    </string-array>

    <string-array name="subutilityarray">
        <item>Electricity</item>
        <item>Gas</item>
        <item>Home Phone</item>
        <item>Cellphone</item>
        <item>Internet</item>
        <item>Cable</item>
        <item>Water</item>
        <item>Trash</item>
        <item>Misc</item>
    </string-array>

    <string-array name="subentertainmentarray">
        <item>Movies</item>
        <item>Vacation</item>
        <item>Digital Media</item>
        <item>Music</item>
        <item>Online Purchases</item>
        <item>Misc</item>
    </string-array>

    <string-array name="submedicalarray">
        <item>Doctor Visit</item>
        <item>Emergency Room</item>
        <item>Medication</item>
        <item>Misc</item>
    </string-array>

    <string-array name="subinsurancearray">
        <item>Home Insurance</item>
        <item>Auto Insurance</item>
        <item>Medical Insurance</item>
        <item>Life Insurance</item>
    </string-array>

    <!-- Category Types -->
    <integer-array name="icons">
        <item>@drawable/food_groceries_dark</item>
        <item>@drawable/utility_misc_dark</item>
        <item>@drawable/entertainment_misc_dark</item>
        <item>@drawable/medical_misc_dark</item>
        <item>@drawable/insurance_dark</item>
    </integer-array>

    <integer-array name="icons_groceries">
        <item>@drawable/food_groceries_dark</item>
        <item>@drawable/food_groceries_dark</item>
        <item>@drawable/food_groceries_dark</item>
    </integer-array>

    <integer-array name="icons_utilities">
        <item>@drawable/utility_misc_dark</item>
        <item>@drawable/utility_gas_dark</item>
        <item>@drawable/landline_phone_bill_dark</item>
        <item>@drawable/cell_phone_bill_dark</item>
        <item>@drawable/entertainment_web_dark</item>
        <item>@drawable/satellite_bill_dark</item>
        <item>@drawable/utility_water_dark</item>
        <item>@drawable/utility_trash_dark</item>
        <item>@drawable/utility_misc_dark</item>
    </integer-array>

    <integer-array name="icons_entertainment">
        <item>@drawable/entertainment_theater_dark</item>
        <item>@drawable/entertainment_vaction_dark</item>
        <item>@drawable/digital_media_dark</item>
        <item>@drawable/digital_music_dark</item>
        <item>@drawable/ecommerce_dark</item>
        <item>@drawable/entertainment_misc_dark</item>
    </integer-array>

    <integer-array name="icons_medical">
        <item>@drawable/medical_visit_dark</item>
        <item>@drawable/emergence_room_dark</item>
        <item>@drawable/medical_prescription_dark</item>
        <item>@drawable/medical_misc_dark</item>
    </integer-array>

    <integer-array name="icons_insurance">
        <item>@drawable/home_insurance_dark</item>
        <item>@drawable/car_insurance_dark</item>
        <item>@drawable/medical_misc_dark</item>
        <item>@drawable/life_insurance_dark</item>
    </integer-array>

    <!-- Category Strings -->
    <string name="category_dialog_title">Type in a Category</string>
    <string name="subcategory_dialog_title">Type in a Subcategory</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>

    <!-- Settings Strings -->
    <string name="title_general_settings">General Settings</string>
    <string name="inline_units">Units</string>
    <string name="title_currency">Currency</string>
    <string name="summary_currency_list">Choose your currency</string>
    <string name="key_budget">budget</string>
    <string name="summary_budget_edit">Change the default budget</string>

    <string name="title_styles">Styles and Color Schemes</string>
    <string name="inline_colors">Colors</string>
    <string name="title_action_bar_color">Action Bar Color</string>
    <string name="summary_action_bar_color">Change the action bar color</string>

    <string name="title_links">Links</string>

    <string name="number_picker_result_value"></string>

    <!-- Action Bar Titles -->
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="title_activity_chart">Charts</string>
    <string name="title_activity_graph">Graphs</string>
    <string name="title_activity_submit">Add Data</string>
    <string name="title_activity_data">Data</string>
    <string name="title_activity_category">Categories</string>
    <string name="title_activity_add_category">Add Category</string>
    <string name="title_activity_add_sub_category">Add Subcategory</string>
    <string name="title_activity_description">Description</string>
    <string name="title_activity_projections">Projections</string>
    <string name="title_activity_edit_category">Edit Category</string>


</resources>
