<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
        <PreferenceCategory android:title="@string/title_general_settings">
            <edu.purdue.vieck.budgetapp.Preferences.CurrencyPreference
                android:title="@string/title_currency"
                android:key="currency"
                android:negativeButtonText="@null"
                android:positiveButtonText="@null"
                android:summary="@string/summary_currency_list" />

            <EditTextPreference
                android:title="@string/budget"
                android:key="@string/key_budget"
                android:defaultValue="500.00"
                android:inputType="numberDecimal"
                android:summary="@string/summary_budget_edit" />

        </PreferenceCategory>
     <PreferenceCategory android:title="@string/title_styles">

            <edu.purdue.vieck.budgetapp.Preferences.ActionBarColorPreference
                android:title="@string/inline_colors"
                android:key="colors"
                android:negativeButtonText="@null"
                android:positiveButtonText="@null"
                android:summary="@string/summary_action_bar_color"/>

        </PreferenceCategory>


</PreferenceScreen>