<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="all">

        <item
            android:id="@+id/nav_item_chart"
            android:icon="@drawable/chart_panel_dark"
            android:title="@string/charts" />

        <item
            android:id="@+id/nav_item_graph"
            android:icon="@drawable/graph_dark"
            android:title="@string/graphs" />

        <item
            android:id="@+id/nav_item_projections"
            android:icon="@drawable/chart_panel_dark"
            android:title="@string/title_activity_projections"/>

        <item
            android:id="@+id/nav_item_list"
            android:icon="@drawable/insurance_dark"
            android:title="@string/data" />

        <item
            android:id="@+id/nav_item_settings"
            android:icon="@drawable/ic_action_settings"
            android:title="@string/action_settings" />

    </group>
</menu>