<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:mContext=".BudgetActivity">

    <item
        android:id="@+id/action_date"
        android:icon="@drawable/ic_date_range_white_48dp"
        android:orderInCategory="100"
        android:title="@string/date"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_add"
        android:icon="@android:drawable/ic_menu_add"
        android:orderInCategory="200"
        android:title="@string/action_add"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_delete"
        android:icon="@android:drawable/ic_menu_delete"
        android:orderInCategory="300"
        android:title="@string/action_delete"
        app:showAsAction="ifRoom" />
</menu>
