<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/MyAppBarLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:mContext="edu.purdue.vieck.budgetapp.Activities.DescriptionActivity">

    <TextView
        android:id="@+id/label_amount"
        style="@style/textview_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:text="@string/amount" />

    <EditText
        android:id="@+id/edittext_amount"
        style="@style/edittext_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/label_amount"
        android:layout_alignBaseline="@id/label_amount"/>

    <TextView
        android:id="@+id/label_category"
        style="@style/textview_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edittext_amount"
        android:text="@string/category" />

    <EditText
        android:id="@+id/edittext_category"
        style="@style/edittext_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/label_category"
        android:layout_alignBaseline="@id/label_category" />

    <TextView
        android:id="@+id/label_subcategory"
        style="@style/textview_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/label_category"
        android:text="@string/subcategory" />

    <EditText
        android:id="@+id/edittext_subcategory"
        style="@style/edittext_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/label_subcategory"
        android:layout_alignBaseline="@id/label_subcategory"/>

    <TextView
        android:id="@+id/label_type"
        style="@style/textview_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/label_subcategory"
        android:text="@string/type" />

    <EditText
        android:id="@+id/edittext_type"
        style="@style/edittext_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/label_type"
        android:layout_alignBaseline="@id/label_type"/>

    <TextView
        android:id="@+id/label_note"
        style="@style/textview_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/label_type"
        android:text="@string/note" />

    <EditText
        android:id="@+id/edittext_note"
        style="@style/edittext_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/label_note"
        android:layout_alignBaseline="@id/label_note"/>

    <TextView
        android:id="@+id/label_date"
        style="@style/textview_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/label_note"
        android:text="@string/date" />

    <EditText
        android:id="@+id/edittext_date"
        style="@style/edittext_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/label_date"
        android:layout_alignBaseline="@id/label_date"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/edit_button"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="12dp"
        android:scaleType="center"
        android:src="@android:drawable/ic_menu_edit"
        android:stateListAnimator="@anim/button_elevation"
        android:tint="?android:attr/colorPrimary"
        app:backgroundTint="?android:attr/colorPrimaryDark"
        app:borderWidth="0dp"/>

</RelativeLayout>
