<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <EditText android:id="@+id/edittext_add_category_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:hint="@string/category_dialog_title"
        android:layout_margin="24dp"/>

    <com.lukedeighton.wheelview.WheelView android:id="@+id/wheel_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/edittext_add_category_name"
        android:layout_margin="12dp"
        app:wheelColor="@color/md_black_1000"
        app:rotatableWheelDrawable="true"
        app:repeatItems="true"
        app:selectionAngle="90.0"
        app:selectionColor="@color/md_green_A400"
        app:selectionPadding="10dp"
        app:wheelRadius="130dp"
        app:wheelItemCount="29"
        app:wheelPadding="5dp"
        app:wheelItemRadius="12dp"/>

    <Button android:id="@+id/confirm_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
       android:layout_below="@id/wheel_view"
        android:layout_alignParentStart="true"
        android:layout_margin="15dp"/>

    <Button android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:layout_below="@id/wheel_view"
        android:layout_alignParentEnd="true"
        android:layout_margin="15dp"/>

</RelativeLayout>