<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/add_fragment"
    style="@style/StyleActivityAdd"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/edittext_amount"
        style="@style/edittext_amount_add_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:hint="@string/amount"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/edittext_note"
        style="@style/edittext_note_add_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edittext_amount"
        android:hint="@string/edittext_note_hint"
        android:maxLength="100"
        android:maxLines="3"/>

    <TextView
        android:id="@+id/textview_note"
        style="@style/textview_add_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edittext_note"
        android:text="@string/textview_note_description" />

    <EditText
        android:id="@+id/edittext_category"
        style="@style/edittext_add_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textview_note"
        android:hint="@string/category" />

    <EditText
        android:id="@+id/edittext_subcategory"
        style="@style/edittext_add_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edittext_category"
        android:hint="@string/subcategory"/>

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edittext_subcategory"
        android:layout_marginBottom="12dp"
        android:layout_marginStart="50dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/income__button"
            style="@style/button_add_fragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/income" />

        <RadioButton
            android:id="@+id/expense_button"
            style="@style/button_add_fragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/expense" />
    </RadioGroup>

    <DatePicker
        android:id="@+id/datepicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/radio_group"
        android:layout_marginStart="50dp"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        android:yearListSelectorColor="?android:attr/colorAccent" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_next"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="12dp"
        android:scaleType="center"
        android:src="@android:drawable/ic_input_add"
        android:stateListAnimator="@anim/button_elevation"
        android:tint="?android:colorPrimary"
        app:backgroundTint="?android:attr/colorPrimaryDark"
        app:borderWidth="0dp" />

</RelativeLayout>