<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView android:id="@+id/currency_label"
        style="@style/edittext_amount_add_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_alignBaseline="@+id/add_textview_amount"/>

    <EditText
        android:id="@+id/add_textview_amount"
        style="@style/edittext_amount_add_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@id/currency_label"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="0dp"
        android:textAlignment="viewEnd"
        android:hint="@string/amount"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/edittext_note"
        style="@style/edittext_note_add_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_textview_amount"
        android:inputType="none"
        android:hint="@string/edittext_note_hint"/>

    <TextView
        android:id="@+id/textview_note"
        style="@style/textview_add_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/edittext_note"
        android:layout_below="@id/edittext_note"
        android:layout_marginStart="0dp"
        android:text="@string/textview_note_description" />

    <EditText
        android:id="@+id/edittext_category"
        style="@style/edittext_add_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textview_note"
        android:layout_centerHorizontal="true"
        android:hint="@string/category" />

    <EditText
        android:id="@+id/edittext_subcategory"
        style="@style/edittext_add_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edittext_category"
        android:layout_centerHorizontal="true"
        android:hint="@string/subcategory"/>

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edittext_subcategory"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="12dp"
        android:layout_marginStart="50dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/income__button"
            style="@style/button_add_fragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/income"
            android:clickable="false"/>

        <RadioButton
            android:id="@+id/expense_button"
            style="@style/button_add_fragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/expense"
            android:clickable="false"/>
    </RadioGroup>

    <DatePicker
        android:id="@+id/datepicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/radio_group"
        android:layout_centerHorizontal="true"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        android:yearListSelectorColor="?android:attr/colorAccent" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/delete_button"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="12dp"
        android:layout_marginStart="12dp"
        android:scaleType="center"
        android:src="@android:drawable/ic_menu_delete"
        android:stateListAnimator="@anim/button_elevation"
        android:tint="?android:attr/colorPrimary"
        app:backgroundTint="@color/md_red_600"
        app:borderWidth="0dp" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/edit_button"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="12dp"
        android:scaleType="center"
        android:src="@android:drawable/ic_menu_edit"
        android:stateListAnimator="@anim/button_elevation"
        android:tint="?android:attr/colorPrimary"
        app:backgroundTint="?android:attr/colorPrimaryDark"
        app:borderWidth="0dp" />

</RelativeLayout>